redis-base/prometheus-ingress-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-redis-exporter-from-prometheus
  labels:
    metrics-ingress: "1"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: redis
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9121
      protocol: TCP
    from:
    - namespaceSelector:
        matchLabels:
          role: monitoring
